// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert component renders correctly closable 1`] = `
<Styled(View)
  color="[mocked blue50]"
  onCloseClick={[MockFunction]}
>
  <Styled(View)>
    <Icon
      allowFontScaling={false}
      color="[mocked blue500]"
      name="info"
      size={28}
    />
  </Styled(View)>
  <Styled(View)>
    <Text>
      <Styled(Text)
        color="[mocked blue500]"
      >
        <FormattedMessage
          id="title_id"
        />
      </Styled(Text)>
      <Styled(Text)
        color="[mocked blue500]"
      >
        <FormattedMessage
          id="subtitle_id"
        />
      </Styled(Text)>
    </Text>
    <Styled(Text)
      color="[mocked blue500]"
    >
      <FormattedMessage
        id="message_id"
      />
    </Styled(Text)>
  </Styled(View)>
  <Styled(Component)
    onPress={[MockFunction]}
  >
    <Icon
      allowFontScaling={false}
      color="[mocked blue500]"
      name="cross"
      size={28}
    />
  </Styled(Component)>
</Styled(View)>
`;

exports[`Alert component renders correctly default 1`] = `
<Styled(View)
  color="[mocked blue50]"
>
  <Styled(View)>
    <Icon
      allowFontScaling={false}
      color="[mocked blue500]"
      name="info"
      size={28}
    />
  </Styled(View)>
  <Styled(View)>
    <Text>
      <Styled(Text)
        color="[mocked blue500]"
      >
        <FormattedMessage
          id="title_id"
        />
      </Styled(Text)>
      <Styled(Text)
        color="[mocked blue500]"
      >
        <FormattedMessage
          id="subtitle_id"
        />
      </Styled(Text)>
    </Text>
    <Styled(Text)
      color="[mocked blue500]"
    >
      <FormattedMessage
        id="message_id"
      />
    </Styled(Text)>
  </Styled(View)>
</Styled(View)>
`;

exports[`Alert component renders correctly with action button 1`] = `
<Styled(View)
  color="[mocked blue50]"
  onCloseClick={[MockFunction]}
>
  <Styled(View)>
    <Icon
      allowFontScaling={false}
      color="[mocked blue500]"
      name="info"
      size={28}
    />
  </Styled(View)>
  <Styled(View)>
    <Text>
      <Styled(Text)
        color="[mocked blue500]"
      >
        <FormattedMessage
          id="title_id"
        />
      </Styled(Text)>
      <Styled(Text)
        color="[mocked blue500]"
      >
        <FormattedMessage
          id="subtitle_id"
        />
      </Styled(Text)>
    </Text>
    <Styled(Text)
      color="[mocked blue500]"
    >
      <FormattedMessage
        id="message_id"
      />
    </Styled(Text)>
    <Styled(Component)
      color="[mocked blue500]"
      onPress={[MockFunction]}
    >
      <Styled(Icon)
        color="[mocked white]"
        name="video"
        size={28}
      />
      <Styled(Text)>
        <FormattedMessage
          id="testActionTextId"
        />
      </Styled(Text)>
    </Styled(Component)>
  </Styled(View)>
  <Styled(Component)
    onPress={[MockFunction]}
  >
    <Icon
      allowFontScaling={false}
      color="[mocked blue500]"
      name="cross"
      size={28}
    />
  </Styled(Component)>
</Styled(View)>
`;

exports[`Alert component renders correctly with string data 1`] = `
<Styled(View)
  color="[mocked blue50]"
>
  <Styled(View)>
    <Icon
      allowFontScaling={false}
      color="[mocked blue500]"
      name="info"
      size={28}
    />
  </Styled(View)>
  <Styled(View)>
    <Text>
      <Styled(Text)
        color="[mocked blue500]"
      >
        test title
      </Styled(Text)>
      <Styled(Text)
        color="[mocked blue500]"
      >
        test title
      </Styled(Text)>
    </Text>
    <Styled(Text)
      color="[mocked blue500]"
    >
      test message
    </Styled(Text)>
  </Styled(View)>
</Styled(View)>
`;

exports[`Alert component renders correctly without subtitle 1`] = `
<Styled(View)
  color="[mocked blue50]"
>
  <Styled(View)>
    <Icon
      allowFontScaling={false}
      color="[mocked blue500]"
      name="info"
      size={28}
    />
  </Styled(View)>
  <Styled(View)>
    <Text>
      <Styled(Text)
        color="[mocked blue500]"
      >
        <FormattedMessage
          id="title_id"
        />
      </Styled(Text)>
    </Text>
    <Styled(Text)
      color="[mocked blue500]"
    >
      <FormattedMessage
        id="message_id"
      />
    </Styled(Text)>
  </Styled(View)>
</Styled(View)>
`;
